; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_vp9.c_set_tile_offset.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_vp9.c_set_tile_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32, i32, i32)* @set_tile_offset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_tile_offset(i32* %0, i32* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %13 = load i32, i32* %8, align 4
  %14 = load i32, i32* %10, align 4
  %15 = mul nsw i32 %13, %14
  %16 = load i32, i32* %9, align 4
  %17 = ashr i32 %15, %16
  store i32 %17, i32* %11, align 4
  %18 = load i32, i32* %8, align 4
  %19 = add nsw i32 %18, 1
  %20 = load i32, i32* %10, align 4
  %21 = mul nsw i32 %19, %20
  %22 = load i32, i32* %9, align 4
  %23 = ashr i32 %21, %22
  store i32 %23, i32* %12, align 4
  %24 = load i32, i32* %11, align 4
  %25 = load i32, i32* %10, align 4
  %26 = call i32 @FFMIN(i32 %24, i32 %25)
  %27 = shl i32 %26, 3
  %28 = load i32*, i32** %6, align 8
  store i32 %27, i32* %28, align 4
  %29 = load i32, i32* %12, align 4
  %30 = load i32, i32* %10, align 4
  %31 = call i32 @FFMIN(i32 %29, i32 %30)
  %32 = shl i32 %31, 3
  %33 = load i32*, i32** %7, align 8
  store i32 %32, i32* %33, align 4
  ret void
}

declare dso_local i32 @FFMIN(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
